syntax = "proto3";

package types;

message NewIDRequest {
    string Name = 1;
}

message NewIDResponse {
    enum ErrorCode {
        OK = 0;
        DRAINED = 2; // pool is drained out
        INTERNAL = -1; // internal error
    }
    ErrorCode Code = 1;
    string Name = 2;
    uint64 ID = 3;
}

service Chief {
    rpc NewID(NewIDRequest) returns (NewIDResponse);
}
